fix the shift in the play controls. Don't allow images to be dragged. Don't highlight text or free space

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,13 @@
 html {
 	height: 100%;
 	font-size: 100%;
+	-webkit-touch-callout: none; /* iOS Safari */
+	  -webkit-user-select: none; /* Safari */
+	   -khtml-user-select: none; /* Konqueror HTML */
+	     -moz-user-select: none; /* Firefox */
+	      -ms-user-select: none; /* Internet Explorer/Edge */
+	          user-select: none; /* Non-prefixed version, currently
+	                                supported by Chrome and Opera */
 }
 
 body {
