--- a/app/styles/player_bar.css
+++ b/app/styles/player_bar.css
@@ -44,8 +44,10 @@
 }
 
 .player-bar .main-controls .play-pause {
+    display: inline-block;
     margin-right: 15%;
     font-size: 1.6rem;
+    width: 1rem;
 }
 
 .player-bar .currently-playing {
